# proj_6ea-digital-architect-platform---core-logic-engine

./: .arvad_session_report.json  .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml
prisma/: schema.prisma  seed.py
scripts/: docker-entrypoint.sh
src/: __init__.py  main.py
src/api/: health.py
src/core/: config.py  dependencies.py  middleware.py
src/database/: client.py  models.py
src/vector_db/: __init__.py  client.py  embedding_service.py  models.py  query_service.py  setup_index.py
tests/: test_database.py  test_docker.py  test_main.py  test_vector_db.py
